[tool.poetry]
name = "kampan"
version = "0.0.1"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-mongoengine = "^1.0.0"
uWSGI = "^2.0.19"
Werkzeug = "^2.0.1"
Flask-Login = "^0.6.0"
watchdog = "^2.1.3"
loginpass = "^0.5"
Authlib = "0.15.5"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.poetry.scripts]
kampan-web = "kampan.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
